<resources>
    <string name="app_name">JCL Trucks</string>
    <string-array name="spinner">
        <item>Gerente</item>
        <item> Funcionário</item>
    </string-array>
    <string name="button">Acessar</string>
    <string name="title_activity_funcionario">MainActivityFuncionario</string>
    <string name="title_historico">Histórico</string>
    <string name="title_lembretes">Lembretes</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_activity_gerente">MainActivityGerente</string>
    <string name="title_informacoes">Informações</string>
    <string name="title_funcionarios">Funcionários</string>
    <string name="title_perfilgerente">Perfil</string>
    <string name="title_activity_tela_gerente">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insiraSenha">Senha</string>
    <string name="insiraEmail">E-mail</string>
    <string name="bemvindo">Seja Bem-Vindo</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceuSenha">Esqueceu a senha?</string>
    <string name="todo">TODO</string>


</resources>