<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_login2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/senha_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/insiraSenha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#8F000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_usuario" />

    <EditText
        android:id="@+id/email_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insiraEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="#90000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="379dp"
        android:layout_height="54dp"
        android:layout_marginTop="204dp"
        android:entries="@array/spinner"
        app:layout_constraintEnd_toEndOf="@+id/email_usuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_usuario"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_acessar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/botão"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/senha_usuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/senha_usuario"
        app:layout_constraintTop_toBottomOf="@+id/senha_usuario" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="177dp"
        android:layout_height="116dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icone_truck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/logo_cor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/entrar"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="16dp"
        android:text="@string/esqueceuSenha"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/bt_acessar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>